--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ ul {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #000C66;
   }
   
   li {
@@ -35,12 +35,15 @@ ul {
     background-image: url("/images//charles-deloye-2RouMSg9Rnw-unsplash.jpg");
     width: 100%;
     height: 100vh;
+    color: #2b2828;
+    background-size: cover;
   }
   .homepage, 
   .admissionsAid,
   .programs,
   .aboutus,
   .contacts {
+    color: #c3bebe;
    padding-top: 90px;
    width: 100%;
    height: 100vh;
@@ -53,10 +56,12 @@ ul {
     height: 240px;
   }
 
+  
+
 
   /* =============== HOME PAGE CODE ===============*/
   .homepage {
-    
+    color: #FF0033;;
   }
 
   .welcomeH1 {
@@ -71,6 +76,8 @@ ul {
   .campusLife {
     padding-top: 60px;
     text-align: center;
+    background-color: #FFC000;
+    color: #5e5e5e;
   }
 
   .campusLH1 {
@@ -94,7 +101,7 @@ ul {
   /* =============== ADMISSION & AID CODE ===============*/
 
   .admissionsAid {
-
+    background-color: #384CA4;
   }
 
   .admissionH1, .programmsH1 {
@@ -109,5 +116,33 @@ ul {
     font-size: 20px;
   }
 
+  /* =============== programs CODE ===============*/
 
-  .programmsH1
+  /* .programmsH1 */
+  .programs {
+    background-color: #FFC000;
+    color: #5e5e5e;
+  }
+
+  .program, .contact {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #FFC000;
+    color: #5e5e5e;
+  }
+
+  .aboutus {
+    background-color: #384CA4;
+  }
+
+  .contacts {
+    background-color: #FFC000;
+    color: #5e5e5e;
+  }
+
+  .card {
+    background-color: aqua;
+    width: 30%;
+    height: 50%;
+    border-radius: 10px;
+  }
