--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@ ul {
   }
 
   .card {
-    background-color: aqua;
+    background-color: #000C66;
+    color: #c3bebe;
     width: 30%;
     height: 50%;
     border-radius: 10px;
